welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:-6: error: Missing closing brace `}' assumed here
try {
^greenTicket:1: error: expected class or object definition
def greenTicket(a:Int, b:Int, c:Int):Int = {
^